<resources>
    <string name="app_name">Manager Students</string>
    <string name="tv_login">ĐĂNG NHẬP</string>
    <string name="tv_user">TÀI KHOẢN</string>
    <string name="tv_password">MẬT KHẨU</string>
    <string name="bt_login">ĐĂNG NHẬP</string>
    <string name="tv_singup">Chưa có tài khoản? Đăng ký</string>
    <string name="img_university">Image\'s University</string>
    <string name="tv_signup">ĐĂNG KÝ</string>
    <string name="tv_repass">NHẬP LẠI MẬT KHẨU</string>
    <string name="bt_signup">ĐĂNG KÝ</string>
    <string name="tv_signin">Đã có tài khoản? Đăng nhập</string>
    <string name="tv_name">HỌ TÊN</string>
    <string name="tv_username">Nguyễn Trung Chiêu</string>
    <string name="tv_logout">Đăng xuất</string>
    <string name="txt_nameapp">Quản lý thông tin sinh viên</string>
    <string name="txt_namestudents">Sinh viên thực hiện: Nguyễn Trung Chiêu\nHoàng Văn Trường</string>
    <string name="tv_id">Mã SV:</string>
    <string name="tv_idst">A12345</string>
    <string name="tv_namee">Họ tên:</string>
    <string name="tv_fullname">Nguyễn Trung Chiêu</string>
    <string name="tv_birth">Ngày sinh:</string>
    <string name="tv_birthday">12/08/2001</string>
    <string name="tv_idclass">Mã lớp:</string>
    <string name="tv_idclasss">CNPM04</string>
    <string name="edt_input_std">\tNhập tên sinh viên cần tìm kiếm</string>
    <string name="edt_input_class">\tNhập tên lớp học cần tìm kiếm</string>
    <string name="tv_addStudent">Thêm sinh viên</string>
    <string name="tv_done">THÊM</string>
    <string name="tv_selectAvt">Chọn ảnh đại diện</string>
    <string name="tv_class">Chọn ảnh lớp học</string>
    <string name="tv_lec">Giảng viên:</string>
    <string name="tv_keyLec">Phan Thanh Sơn</string>
    <string name="tv_idClass">Mã lớp:</string>
    <string name="tv_nameClass">Tên lớp:</string>
    <string name="tv_keyClass">Công nghệ phần mềm</string>
</resources>