<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_user"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_mngstudents" />

        <TextView
            android:layout_marginStart="7dp"
            android:id="@+id/tv_sv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ic_user"
            android:text="@string/tv_id"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/tv_sv"
            android:text="@string/tv_idst"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_marginStart="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/ic_user"
            android:text="@string/tv_namee"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/tv_sv"
            android:text="@string/tv_fullname"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/ic_user"
            android:text="@string/tv_birth"
            android:textColor="@color/black"
            android:layout_marginStart="7dp"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/tv_sv"
            android:text="@string/tv_birthday"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@+id/ic_user"
            android:layout_marginStart="7dp"
            android:text="@string/tv_idclass"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@+id/tv_sv"
            android:text="@string/tv_idclasss"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
