<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signupin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/img_university"
        app:srcCompat="@drawable/img_sharp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="310dp"
        android:text="@string/tv_signup"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="345dp"
        android:text="@string/tv_user"
        android:textColor="#6C6AFB"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="405dp"
        android:text="@string/tv_name"
        android:textColor="#6C6AFB"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="415dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="465dp"
        android:text="@string/tv_password"
        android:textColor="#6C6AFB"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="60dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="525dp"
        android:text="@string/tv_repass"
        android:textColor="#6C6AFB"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="60dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="225dp"
        android:background="@drawable/custom_button"
        android:text="@string/bt_signup"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="55dp"
        android:text="@string/tv_signin"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic" />

</FrameLayout>