<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signupin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/img_university"
        app:srcCompat="@drawable/img_sharp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="305dp"
        android:fontFamily="sans-serif"
        android:text="@string/tv_login"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="375dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tv_user"
        android:textColor="#6C6AFB"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="455dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tv_password"
        android:textColor="#6C6AFB"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="60dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="225dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/bt_login"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/tv_singup"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic" />

</FrameLayout>