<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_item_class"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="7dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="7dp"
    app:cardCornerRadius="7dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_class"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_subject" />

        <TextView
            android:id="@+id/tv_idClassRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/ic_class"
            android:text="@string/tv_idClass"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_keyIdClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/tv_lec"
            android:text="@string/tv_idst"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_nameClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/ic_class"
            android:text="@string/tv_nameClass"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_keyNameClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/tv_lec"
            android:text="@string/tv_keyClass"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_lec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="48dp"
            android:layout_toEndOf="@+id/ic_class"
            android:text="@string/tv_lec"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_keyLec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="48dp"
            android:layout_toEndOf="@+id/tv_lec"
            android:text="@string/tv_keyLec"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>
